tests/meta_property/meta_property.exp
Error ----------------------------------------------------------------------------------------------- import_meta.js:7:2

Cannot cast `import.meta` to number literal `1` because `Import$Meta` [1] is incompatible with number literal `1` [2].
[incompatible-cast]

   import_meta.js:7:2
      7| (import.meta: 1); // Error
          ^^^^^^^^^^^

References:
   <BUILTINS>/core.js:2619:20
                            v
   2619| type Import$Meta = {
   2620|   [string]: mixed,
   2621|   url?: string,
   2622|   ...
   2623| };
         ^ [1]
   import_meta.js:7:15
      7| (import.meta: 1); // Error
                       ^ [2]


Error ----------------------------------------------------------------------------------------------- import_meta.js:8:2

Cannot cast `import.meta.XXX` to number literal `1` because mixed [1] is incompatible with number literal `1` [2].
[incompatible-cast]

   import_meta.js:8:2
      8| (import.meta.XXX: 1); // Error
          ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:2620:13
   2620|   [string]: mixed,
                     ^^^^^ [1]
   import_meta.js:8:19
      8| (import.meta.XXX: 1); // Error
                           ^ [2]


Error ------------------------------------------------------------------------------------------------ new_target.js:5:4

Cannot cast `new.target` to boolean because mixed [1] is incompatible with boolean [2]. [incompatible-cast]

   new_target.js:5:4
   5|   (new.target: boolean); // Error
         ^^^^^^^^^^ [1]

References:
   new_target.js:5:16
   5|   (new.target: boolean); // Error
                     ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- new_target.js:13:6

Cannot cast `new.target` to boolean because mixed [1] is incompatible with boolean [2]. [incompatible-cast]

   new_target.js:13:6
   13|     (new.target: boolean); // Error
            ^^^^^^^^^^ [1]

References:
   new_target.js:13:18
   13|     (new.target: boolean); // Error
                        ^^^^^^^ [2]



Found 4 errors
